# rust_pomodoro_webapp

./: .gitignore  Cargo.toml  Dockerfile  Trunk.toml  docker-compose.yml  index.css  index.html  index.scss  package-lock.json  readme.md
.github/workflows/: deploy.yml
devcontainer/: Dockerfile  docker-compose.yml
src/: main.rs  pomodoro.rs
src/components/: audio.rs  inputfield.rs  mod.rs  pomodoro.rs  selectfield.rs  timer.rs
src/pages/: home.rs
src/services/: timer.rs
src/utils/: timer.rs
