[package]
name = "yew_pomodoro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
js-sys = "0.3"
gloo = "0.10"
wasm-bindgen = "0.2"